Corrected glyph alignment on character talents

--- a/_css/tools/talent-calc.css
+++ b/_css/tools/talent-calc.css
@@ -61,7 +61,7 @@ a.awesomeButton-printableVersion div { background-image: url('../../images/talen
 
 /* glyphs */
 #glyphsLabel { float: left; margin: 50px 0 0 0px !important; }
-#glyphHolder {position:absolute; top: 203px; right: 25px; width: 210px; height: 232px;}
+#glyphHolder {position:absolute; top: 165px; right: 25px; width: 210px; height: 232px;}
 .glyphHolderBottom { margin: 0 auto; background: url('../../images/talents/glyph-frame-bottom.gif') 0 0 no-repeat; width: 836px; height: 27px; position:relative; top: -30px;  } 
 
 #glyphHolder .glyph { cursor: default; float: left; display: block; background: url('../../images/talents/glyphs-small-left.gif') 0 0 no-repeat; padding: 0 0 0 33px; height: 33px; width: 173px; }
